Finished the methods and changed a bit the api
