# service/api/unlikePhoto.go
@@ -3,27 +3,42 @@ package api
 import (
 	"encoding/json"
 	"fmt"
+	"github.com/julienschmidt/httprouter"
 	"net/http"
+	"strconv"
 )
 
 type unlikeRequest struct {
-	PostId       int    `json:"postId"`
-	unlikingUser string `json:"unlikingUser"`
+	PostId    int    `json:"postId"`
+	PostOwner string `json:"username"`
+	LikeId    int    `json:"likeId"`
 }
 type unlikeResponse struct {
 	Message string `json:"message"`
 }
 
 // Handler for unliking a post
-func unlikePhoto(w http.ResponseWriter, r *http.Request) {
+func (rt *_router) unlikePhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
 	// Create a new unlike request
 	var unlikeReq unlikeRequest
+	unlikeReq.PostOwner = ps.ByName("username")
+	var err error
+	unlikeReq.PostId, err = strconv.Atoi(ps.ByName("postId"))
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+	unlikeReq.LikeId, err = strconv.Atoi(ps.ByName("likeId"))
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
 	// Decode the request body into unlikeReq
 	if err := json.NewDecoder(r.Body).Decode(&unlikeReq); err != nil {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
-	removeLikeByID(unlikeReq.PostId, unlikeReq.unlikingUser)
+	removeLikeByID(unlikeReq)
 	unlikeResponse := unlikeResponse{Message: "Successfully unliked the post"}
 
 	w.Header().Set("Content-Type", "application/json")
@@ -32,17 +47,17 @@ func unlikePhoto(w http.ResponseWriter, r *http.Request) {
 }
 
 // Remove a like from a post by ID
-func removeLikeByID(postID int, unlikeUser string) error {
+func removeLikeByID(request unlikeRequest) error {
 	// Check if the post exists
-	post, exists := posts[postID]
+	post, exists := posts[request.PostId]
 	if !exists {
-		return fmt.Errorf("Post with ID %d not found", postID)
+		return fmt.Errorf("Post with ID %d not found", request.PostId)
 	}
 
 	// Find the index of the like with the given ID
 	likeIndex := -1
 	for i, like := range post.Likes {
-		if like.LikeOwner == unlikeUser {
+		if like.LikeId == request.LikeId {
 			likeIndex = i
 			break
 		}
@@ -52,9 +67,9 @@ func removeLikeByID(postID int, unlikeUser string) error {
 	if likeIndex != -1 {
 		post.Likes = append(post.Likes[:likeIndex], post.Likes[likeIndex+1:]...)
 		post.NLikes--
-		posts[postID] = post // Update the post in the posts map
+		posts[request.PostId] = post // Update the post in the posts map
 		return nil
 	}
 
-	return fmt.Errorf("Like with owner %s not found in post %d", unlikeUser, postID)
+	return fmt.Errorf("Like with id %s not found in post with id %d", request.LikeId, request.PostId)
 }
