# service/api/uploadPhoto.go
@@ -10,9 +10,9 @@ import (
 var posts = map[int]Post{}
 
 // Upload a photo to the current user's profile
-func uploadPhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
+func (rt *_router) uploadPhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
 	w.Header().Set("content-type", "application/json")
-	currentUsername := getCurrentUser().Username
+	currentUsername := CurrentUser.Username
 	uploadedImage := r.URL.Query().Get("image")
 	id := int(len(posts))
 	posts[id] = Post{
@@ -25,7 +25,7 @@ func uploadPhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
 		CreationTime: time.Now().Format("2006-01-02 15:04:05"),
 		PostId:       id,
 	}
-	CurrentUser.Profile.Posts = append(getCurrentUser().Profile.Posts, id)
+	CurrentUser.Profile.Posts = append(CurrentUser.Profile.Posts, id)
 	CurrentUser.Profile.NumberOfPhotos++
 	users[currentUsername] = CurrentUser
 	json.NewEncoder(w).Encode(id)
